--- a/app/src/main/res/layout/activity_choosecalc.xml
+++ b/app/src/main/res/layout/activity_choosecalc.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".choosecalcActivity"
+    tools:context=".ChooseCalcActivity"
     android:background="@color/chooseback">
     <LinearLayout
         android:layout_width="match_parent"
